--- a/package.json
+++ b/package.json
@@ -5,17 +5,22 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server.js",
-    "start-dev": "nodemon src/server.js"
+    "start-dev": "nodemon src/server.js",
+    "lint": "eslint ./src",
+    "lint-fix": "eslint ./src --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@hapi/hapi": "^21.4.0",
+    "nanoid": "^3.3.11",
     "nodemon": "^3.1.10"
   },
   "devDependencies": {
     "eslint": "^9.27.0",
+    "eslint-config-dicodingacademy": "^0.9.4",
     "eslint-config-xo": "^0.47.0"
   }
 }
